Refactored code by removing 'html {height: 100%;}' on desktop devices to fix a layout issue.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ footer {
 
 @media screen and (max-width: 1439px) {
     html {
-        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -97,6 +96,7 @@ footer {
 
     header {
         margin-bottom: 24px;
+        margin-top: 24px;
     }
 
     header > img {
